# nexus-cli

./: .gitattributes  .gitignore  AUTHORSHIP_DISPUTE_ANALYSIS.md  BOUNTY.md  CHANGELOG_BLOG_POST.md  CLI_CONTRIBUTORS_REPORT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.0.10.2  PR_DESCRIPTION.md  PR_DESCRIPTION_DIFFICULTY_FIX.md  README.md  TASK.md  docker-compose.yaml  firebase.json  get_pr_authors.sh  run-rust-checks.sh  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: c2pa.yml  ci.yml  firebase-hosting-pull-request.yml  firebase-hosting-release.yml  release-matrix.yml  release.yml  rust.yml  verify-default-program.yml  verify-elf.yml
assets/ascii/: outro-syn.txt
clients/cli/: .gitignore  BUILD_STRATEGY.md  CONFIG_TOML_GUIDE.md  Cargo.toml  PERFORMANCE_OPTIMIZATION.md  README.md  SECURITY.md  THEME_SYSTEM.md  build-ci-aware.sh  build-ci-safe.sh  build-flexible.sh  build-optimized.sh  build.rs  demo-themes.sh  diff.txt  integration_test.sh  integration_test_invalid_node.sh  peak_memory.sh  risky.txt  risky_summary.csv  run_integration_tests.sh  rust-toolchain.toml  test-native-cpu.sh  test-themes.sh
clients/cli-npm-installer/: README.md  package-lock.json  package.json
clients/cli/.cargo/: config.toml
clients/cli/assets/: README.md  fib_input_initial  fib_input_initial.elf
clients/cli/examples/: Cargo.toml
clients/cli/examples/src/: main.rs
clients/cli/fib_input_initial/: README.md
clients/cli/programs/fib_input_initial/: README.md  rust-toolchain.toml
clients/cli/programs/fib_input_initial/src/: main.rs
clients/cli/programs/fib_input_initial/src/guest/src/: main.rs
clients/cli/scripts/: README.md
clients/cli/src/: analytics.rs  ascii_cube.rs  audio.rs  cli_messages.rs  config.rs  consts.rs  environment.rs  error_classifier.rs  events.rs  flops.rs  keys.rs  main.rs  main.rs.backup  memory_stats.rs  orchestrator_client.rs  orchestrator_error.rs  pretty.rs  prover.rs  prover_runtime.rs  register.rs  runtime.rs  setup.rs  stats.rs  syn.rs  system.rs  task.rs  task_cache.rs  version_checker.rs  version_requirements.rs
clients/cli/src/config/: config.rs  mod.rs
clients/cli/src/network/: client.rs  error_handler.rs  mod.rs  request_timer.rs
clients/cli/src/orchestrator/: client.rs  client.rs.bak  error.rs  mod.rs
clients/cli/src/programs/: Cargo.toml  build.rs  c2pa.rs  rust-toolchain.toml
clients/cli/src/programs/src/: c2pa.rs  lib.rs  test_utils.rs
clients/cli/src/programs/tests/: c2pa_test.rs
clients/cli/src/proto/: nexus.orchestrator.rs
clients/cli/src/prover/: engine.rs  handlers.rs  input.rs  pipeline.rs  types.rs
clients/cli/src/session/: headless_mode.rs  messages.rs  mod.rs  setup.rs  tui_mode.rs
clients/cli/src/ui/: Dashboard_UI.md  app.rs  dashboard.rs  login.rs  metrics.rs  mod.rs  splash.rs  stages.rs  theme.rs
clients/cli/src/ui/dashboard/: renderer.rs  state.rs  updaters.rs  utils.rs
clients/cli/src/ui/dashboard/components/: footer.rs  header.rs  logs.rs  metrics.rs  mod.rs  rewards_overlay.rs
clients/cli/src/ui/syn_recruit/: mod.rs
clients/cli/src/utils/: banner.rs  cli_branding.rs  mod.rs  stats_display.rs  system.rs
clients/cli/src/version/: checker.rs  manager.rs  mod.rs  requirements.rs
clients/cli/src/workers/: authenticated_worker.rs  core.rs  fetcher.rs  offline.rs  online.rs  prover.rs  submitter.rs
clients/cli/tests/: cli.rs
functions/: package.json  test-cache.sh
functions/src/: index.ts
programs/: Cargo.toml  README.md
programs/c2pa/: Cargo.toml  README.md
programs/c2pa-core/: Cargo.toml
programs/c2pa-core/src/: lib.rs
programs/c2pa/core/: Cargo.toml
programs/c2pa/core/src/: lib.rs
programs/c2pa/guest/: Cargo.toml
programs/c2pa/guest/src/: lib.rs
programs/c2pa/runner/: Cargo.toml
programs/c2pa/runner/src/: main.rs
programs/c2pa/src/: compression.rs  lib.rs  main.rs
programs/c2pa/tests/: compression_tests.rs  harness.rs  manifest_tests.rs  simple_test.rs  test_utils.rs
programs/fib_input_initial/: README.md  build_and_copy.sh
programs/fib_input_initial/src/: main.rs
proto/: orchestrator.proto
public/: config.json  install.sh  version.json
scripts/: README.md  run_integration_tests.sh
scripts/syn/: activity.log.json  all-your-node.scenes.json
src/: lib.rs
tests/: integration_test.sh  smoke_test.sh  test_updater.sh
~/.cargo/: config.toml
