[workspace]
members = ["c2pa"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
nexus-rt = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.2", default-features = false, features = ["minimal"] }
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.2", default-features = false, features = ["minimal"] }
uuid = { version = "1.16.0", default-features = false, features = ["js", "v4"] } 