[package]
name = "c2pa"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
nexus-rt = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.2" }
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.2" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true 