[workspace]
members = ["core", "guest"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
nexus-rt = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.2", default-features = false, features = ["minimal"] }
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.2", default-features = false, features = ["minimal"] }

[package]
name = "c2pa"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
c2pa-core = { path = "../c2pa-core" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.ci-build]
inherits = "workspace.ci-build" 