[workspace]
members = ["core", "guest", "runner"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
nexus-rt = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.2", default-features = false }
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.2", default-features = false }

[profile.ci-build]
inherits = "release"
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[package]
name = "c2pa"
version.workspace = true
edition.workspace = true

[features]
default = ["pure-rust"]
pure-rust = []
zkvm = ["nexus-sdk"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
c2pa-core = { path = "./core" }
nexus-sdk = { workspace = true, optional = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true 