[package]
name = "c2pa-core"
version.workspace = true
edition.workspace = true

[features]
default = ["pure-rust"]
pure-rust = ["ed25519-dalek"]
zkvm = ["nexus-sdk"]

[dependencies]
ed25519-dalek = { version = "2.1.0", default-features = false, optional = true }
nexus-sdk = { workspace = true, optional = true }

[dev-dependencies]
test-case = "3.3.1" 