[package]
name = "nexus-programs"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_programs"
path = "src/lib.rs"

[[bin]]
name = "c2pa"
path = "src/c2pa.rs"

[dependencies]
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm", tag = "0.3.2", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.19.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
ed25519-dalek = { version = "1.0.1", default-features = false }
rand = { version = "0.7.3", default-features = false }

[features]
default = ["std"]
std = [
    "hex/std",
    "sha3/std",
    "ed25519-dalek/std",
    "rand/std",
    "once_cell/std"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true 